sc_app/templates/app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-loadbalancer
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
