sc_app/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-server
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
#  type: NodePort
  clusterIP: 10.96.3.1
