sc_app/templates/server-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-access
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
