sc_app/templates/frontend-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-ingress
spec:
  podSelector:
    matchLabels:
      app: webapp
      role: admin-role
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
